[tool.poetry]
name = "tb-import"
version = "0.2.1"
description = ""
authors = ["Simon Galli <simon.galli@miromico.ch>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
requests = "^2.25.1"
pandas = "^1.2.4"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
black = "^21.5b1"

[tool.poetry.scripts]
tb-import = "tb_import.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
